<resources>
    <string name="app_name">Yu:GO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">OR</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_ride">New Ride</string>
    <string name="current_location">Current location</string>
    <string name="starting_location">Starting location</string>
    <string name="where_to">Where to?</string>
    <string name="include_baby">Include baby</string>
    <string name="include_pets">Include pets</string>
    <string name="number_of_passengers">Number of passengers</string>
    <string name="category">Category</string>
    <string name="pick_your_destination">Pick your destination</string>
    <string name="pick_vehicle_category">Pick vehicle category</string>
    <string name="pick_time_of_the_ride">Pick time of the ride</string>
    <string name="now">Now</string>
    <string name="or_book_in_advance">or book in advance</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="save_changes">save changes</string>
    <string name="sign_in">Sign in</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="address">Address</string>
    <string name="price">Price</string>
    <string name="confirm_your_ride">Confirm your ride</string>
    <string name="accept">Accept</string>
    <string name="driving_licence">Driving licence:</string>
    <string name="select_from_gallery">select from gallery</string>
    <string name="registration_licence">Registration licence:</string>
    <string name="split_fare">split fare</string>
    <string name="logo">Logo</string>
    <string name="starting_location_icon">Starting Location Icon</string>
    <string name="destination_icon">Destination Icon</string>
    <string name="vehicle">Vehicle</string>
    <string name="person">Person</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="map">Map</string>
    <string name="panic">PANIC</string>
    <string name="info">Info</string>
    <string name="statistics">Statistics</string>
    <string name="report">Report</string>
    <string name="driver_home_fragment">Driver home fragment</string>
    <string name="income">Income</string>
    <string name="rating">Rating</string>
    <string name="work_hours">Work hours</string>
    <string name="rides">Rides</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="favourites">Favourites</string>
    <string name="messages">Messages</string>
    <string name="notifications">Notifications</string>
    <string name="send">send</string>
    <string name="start">Start</string>
    <string name="destination">Destination</string>
    <string name="distance">Distance</string>
    <string name="arrow_down">Arrow down</string>
    <string name="decline">Decline</string>
    <string name="checkpoint">Checkpoint</string>
    <string name="create_ride">Create ride</string>
    <string name="duration">Duration</string>
    <string name="edit">Edit</string>
    <string name="sender_picture">Sender picture</string>
    <string name="sender_name">Sender name</string>
    <string name="message">message</string>
    <string name="enter_message">Enter Message</string>
    <string name="forgot_password_c">Forgot Password?</string>
    <string name="forgot_password_explanation">Enter the email address associated \n with your account.</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="no">No</string>
    <string name="yes">YES</string>
    <string name="date_dd">Date: %1$s</string>
    <string name="time_dd">Time: %1$s</string>
    <string name="we_are_searching_a_driver_for_your_ride_please_wait">We are searching a driver for your ride, please wait.</string>
    <string name="start_ride">Start ride</string>
    <string name="start_next_ride">Start next ride</string>
    <string name="documents">Documents</string>
    <string name="edit_account">Edit account</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="edit_password">Edit password</string>
    <string name="standard">STANDARD</string>
    <string name="lux">LUX</string>
    <string name="van">VAN</string>
    <string name="model">Model</string>
    <string name="license_plate">License plate</string>
    <string name="baby_transport">Baby transport</string>
    <string name="pet_transport">Pet transport</string>
    <string name="passenger_seats">Passenger seats</string>
    <string name="edit_vehicle">Edit vehicle</string>
    <string name="send_request">Send request</string>
    <string name="cancel">Cancel</string>
    <string name="vehicle_type">Vehicle type</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="profile_picture">Profile picture</string>
    <string name="add_to_favorites">Add to favorites</string>
</resources>