<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".gui.fragments.account.VehicleFragment"
    android:paddingHorizontal="5dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/modelTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:errorEnabled="true"
        android:hint="@string/model"
        app:startIconDrawable="@drawable/icon_car"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/modelEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:enabled="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/licenseNumberTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/license_plate"
        app:startIconDrawable="@drawable/icon_numbers"
        app:errorEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/licenseNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:enabled="false"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vehicle_type"
        android:textColor="@color/dark_gray_pewter"
        android:textSize="15sp"/>
    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/vehicleTypeGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:singleSelection="true"
        app:selectionRequired="true">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/standardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/standard"
            style="@style/VehicleTypeStyle"
            android:textColor="@color/pewter_dark_gray"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/luxButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lux"
            style="@style/VehicleTypeStyle"
            android:textColor="@color/pewter_dark_gray"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/vanButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/van"
            style="@style/VehicleTypeStyle"
            android:textColor="@color/pewter_dark_gray"/>
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/babyTransport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/baby_transport"
        android:enabled="false"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/petTransport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pet_transport"
        android:layout_marginBottom="20dp"
        android:enabled="false"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passenger_seats"
        android:textColor="@color/dark_gray_pewter"
        android:textSize="15sp"/>
    <com.google.android.material.slider.Slider
        android:id="@+id/passengerSeats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:valueFrom="1"
        android:valueTo="8"
        android:stepSize="1"
        android:enabled="false"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/editVehicle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_vehicle"
        android:layout_marginTop="15dp"/>

    <LinearLayout
        android:id="@+id/optionsLayoutVehicle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:visibility="gone">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelVehicleChange"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/red"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sendVehicleRequest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/send_request"
            android:layout_marginStart="10dp"/>
    </LinearLayout>


</LinearLayout>