<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.activities.LoginActivity">

    <EditText
        android:id="@+id/loginEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@id/logoLogin"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:backgroundTint="@color/yellowish"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@+id/loginEmailAddress"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:backgroundTint="@color/yellowish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEmailAddress" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@id/forgotPassword"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPassword" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/orLb"
        android:text="@string/sign_up"
        android:onClick="onClick"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/registerButton">
        <Button
            android:id="@+id/continueGoogle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="#FFFFFF"
            android:text="@string/continue_with_google"
            android:textSize="12sp"
            android:drawableLeft="@drawable/icon_google"/>
        <Button
            android:id="@+id/continueFacebook"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="#4267B2"
            android:drawableLeft="@drawable/icon_facebook"
            android:textColor="@color/white"
            android:text="@string/continue_with_facebook"
            android:textSize="12sp"/>

    </LinearLayout>


    <TextView
        android:id="@+id/orLb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/loginButton"
        android:text="@string/or"
        android:textColor="@color/dark_gray_pewter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassword" />

    <View
        android:id="@+id/lineLeft"
        android:layout_width="154dp"
        android:layout_height="2dp"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@id/orLb"
        android:layout_below="@+id/loginButton"
        android:layout_marginTop="30dp"
        android:background="@color/dark_gray_pewter"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <View
        android:id="@+id/lineRight"
        android:layout_width="154dp"
        android:layout_height="2dp"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/orLb"
        android:background="@color/dark_gray_pewter"
        android:layout_below="@+id/loginButton"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginPassword"
        android:layout_marginTop="20dp"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="@color/blue_gray"/>

    <ImageView
        android:id="@+id/logoLogin"
        android:layout_width="161dp"
        android:layout_height="158dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/icon_yugo_logo_flat"
        android:contentDescription="@string/logo" />

</RelativeLayout>