<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="10dp"
    tools:context=".gui.fragments.account.DriverInfoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_gray_pewter"
                android:textSize="15sp"
                android:labelFor="@+id/editTextFirstName"
                android:text="@string/first_name"/>
            <include layout="@layout/edit_text_update"
                android:id="@+id/nameContainerDriver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/dark_gray_pewter"
                android:textSize="15sp"
                android:labelFor="@+id/editTextLastName"
                android:text="@string/last_name"/>
            <include layout="@layout/edit_text_update"
                android:id="@+id/lastNameContainerDriver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/dark_gray_pewter"
                android:textSize="15sp"
                android:labelFor="@+id/editTextPhone"
                android:text="@string/phone_number"/>
            <include layout="@layout/edit_text_update"
                android:id="@+id/phoneContainerDriver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/dark_gray_pewter"
                android:textSize="15sp"
                android:labelFor="@+id/editTextEmail"
                android:text="@string/email"/>
            <include layout="@layout/edit_text_update"
                android:id="@+id/emailContainerDriver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/dark_gray_pewter"
                android:textSize="15sp"
                android:labelFor="@+id/editTextAddress"
                android:text="@string/address"/>
            <include layout="@layout/edit_text_update"
                android:id="@+id/addressContainerDriver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/drivers_licence"
                android:textSize="15sp"/>
            <Button
                android:layout_width="wrap_content"
                android:id="@+id/buttonPickDriversLicence"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white_dark_gray"
                android:textColor="@color/dark_gray_pewter"
                android:text="@string/select_from_gallery"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/registration_licence"
                android:textSize="15sp"/>
            <Button
                android:layout_width="wrap_content"
                android:id="@+id/buttonPickRegistrationLicence"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white_dark_gray"
                android:textColor="@color/dark_gray_pewter"
                android:text="@string/select_from_gallery"/>
            <Button
                android:id="@+id/buttonCreateAccount"
                android:layout_width="match_parent"
                android:text="@string/save_changes"
                android:layout_height="58dp"
                android:layout_marginTop="20dp"
                tools:layout_editor_absoluteX="21dp" />


        </LinearLayout>
    </ScrollView>
</RelativeLayout>