<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorPrimaryVariant"
    tools:context=".gui.home.CreateRideSubfragment02">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center"
        android:textColor="@color/dark_gray_pewter"
        android:textSize="20sp"
        android:text="@string/pick_vehicle_category"/>
    <ListView
        android:id="@+id/listViewVehicleType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:id="@+id/checkBoxIncludeBaby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/dark_gray_pewter"
        android:buttonTint="@color/yellowish"
        android:text="@string/include_baby"/>
    <CheckBox
        android:id="@+id/checkBoxIncludePets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/dark_gray_pewter"
        android:buttonTint="@color/yellowish"
        android:text="@string/include_pets"/>

</LinearLayout>